# nsh-bot

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile.api  Dockerfile.conversation-worker  Dockerfile.frontend  Dockerfile.llm-worker  Dockerfile.mcp  Dockerfile.outbound-worker  README.md  alembic.ini  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_zalo_tokens.py  003_add_pkce_to_zalo_tokens.py  004_add_admin_tables.py  005_add_messages_error_and_indexes.py  006_add_oa_id_to_zalo_tokens.py  007_add_evaluation_tables.py  007_add_user_id_by_app_to_zalo_users.py  008_add_judgment_to_test_cases.py  009_add_evaluation_tables.py  010_add_judgment_to_test_cases.py  b7de17372549_add_zalo_users_table.py
app/: __init__.py
app/api/: __init__.py  config.py  dependencies.py  main.py  middleware.py
app/core/: __init__.py  config.py  database.py  rabbitmq.py  redis.py  session.py
app/mcp/: __init__.py  backend.py  engine.py  server.py
docs/: DEPLOYMENT.md  MCP_DESIGN.md  POSTMORTEM-2026-04-17.md  POSTMORTEM.md  SPEC.md  ShippingCostCalculation.md  prd_phase1.md
docs_phase2_completed/: 2026-04-05-phase2-frontend-design.md  2026-04-06-phase2-admin-control-plane.md
frontend/: package-lock.json  package.json
nsh-mcp/: Dockerfile  pyproject.toml
nsh-mcp/data/nsh/: pricing_rules.json
nsh-mcp/src/nsh_mcp/: customer.py  engine.py  logging.py  server.py  support.py  tools.py
nsh-mcp/src/nsh_mcp/pricing/: __init__.py  cache.py  config.py  pricing.py
nsh-mcp/tests/: __init__.py
nsh-mcp/tests/unit/: test_pricing.py
scripts/: dev-start.sh
tests/: .env.test  conftest.py
(+172 files in other folders)
