[project]
name = "neochat"
version = "0.1.0"
description = "NeoChatPlatform Phase 1 - Zalo chatbot agent"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Redis
    "redis>=5.2.0",

    # RabbitMQ
    "aio-pika>=9.4.0",

    # LLM
    "anthropic>=0.42.0",

    # HTTP client
    "httpx>=0.28.0",

    # Logging
    "structlog>=24.4.0",

    # Metrics
    "prometheus-client>=0.21.0",

    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
    "fakeredis>=2.26.0",
    "aioresponses>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "fakeredis>=2.26.0",
    "aioresponses>=0.7.0",
]
